deployment/infrastructure/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 80
            pathType: Prefix
            path: /
      host: keycloak-service
